# GigaBrain

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  obsidian-release.yml
cns/: bet.py  cli.py  config.py  conflicts.py  costs.py  daily_report.py  detector.py  execute.py  hook_executor.py  hooks.py  index.py  models.py  pricing.py  reviews.py  roles.py  signals.py  signals_linear.py
docs/: customizing-roles.md  getting-started.md  how-to-gigabrain.md  installing-hook-executor.md  wiring-into-automation.md
docs/obsidian-plugin/: architecture.md
docs/specs/: 2026-04-26-scheduling-primitive.md
examples/: config-engineering-lead.yaml  config-solo-founder.yaml
examples/example-bets/: bet_hire_first_designer.md  bet_ship_v1_blog.md
examples/walkthrough-linear-layer/: README.md  bet_cns_linear_layer_v1.md
obsidian-plugin/: README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  vitest.config.ts
templates/: BETS.md.template  CONFLICTS.md.template  bet.md.template  claude-settings.hook.json.template  config.yaml.template
tests/: conftest.py  test_bet.py  test_bet_create.py  test_cli.py  test_cli_ticket.py  test_config.py  test_conflicts.py  test_costs.py  test_daily_report.py  test_detector.py  test_execute.py  test_execute_linear_prompt.py  test_hook_executor.py  test_hooks.py  test_index.py  test_models.py  test_models_linear.py  test_pricing.py  test_reviews.py  test_reviews_linear.py  test_roles.py  test_signals_git.py  test_signals_github.py  test_signals_linear.py  test_signals_vault.py
(+53 files in other folders)
