[project]
name = "cns"
version = "0.1.0"
description = "Central Nervous System: atomized strategic bets with conflict detection for markdown vaults"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "James Gao"}]
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
cns = "cns.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cns*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
